[package]
name = "code-of-the-rings"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
itertools = "0.8.0"
libc = "0.2.62"
rand = { version = "0.7.2", features = ["small_rng"] }
regex = "1.3.0"
time = "0.1.42"
